solc_mutator_ossfuzz_seed_corpus/test_sol/test_c93ddccaa36c589f4d16ba29ddc040aa22ca38df99735162f71274c596b9e586_4ea9dcc16da915ad4a3c55e0e8a085dde94cab07_sol.sol
==== Source:  ====

==== Source: su0.sol ====
type T0 is bool;
contract C0 {
  receive() external virtual  payable
  {
  }
  T0   s0 = T0.wrap(false);
  address   s1 = address(this);
  uint40  public s2;
  constructor(uint40 i0) payable  {
    s2 <<= uint40(1099511627775);
    unchecked {
      payable(this).transfer(4160882204667967424);
    }
  }
}
pragma solidity >= 0.0.0;

==== Source: su1.sol ====
contract C1 {
  function f1() external    returns(int32 o0,function (bytes4) internal   returns (address payable, address payable, uint88) o1)
  {
    (bool l0, bytes memory l1) = address(this).call(bytes("0000000000000000000000000000000000000000000000000000000000000000000000"));
    for(    address l2 = address(this);
;
new int240[](1))
    {
      (bool l3, bytes memory l4) = address(this).call(bytes("00000000000000000000000000000000000000e839daa3891e054314b2547d0ebfa8984333fc2f45f27d5d"));
    }
  }
  uint168  public s3 = uint168(203152114208860284403366659031897788885866754031492);
  bytes25  public s4 = bytes25(0xc69afa3c99e1f8a04378e0906294b99d6cec7659e0d0cff17c);
}
pragma solidity >= 0.0.0;
contract C2 {
  uint136   s5 = uint136(0);
  bytes11 immutable  s6;
  bool   s7;
  address payable immutable  s8 = payable(address(this));
  constructor(bytes11 i0,bool i1)   {
    s6 = bytes11(0xffffffffffffffffffffff);
    s7 = false;
    unchecked {
    }
  }
  receive() external   payable
  {
    (bool l0, bytes memory l1) = payable(this).call{value: 4358273347808524916}("");
    (bool l2) = payable(this).send(2916855076081493671);
    (bool l3, bytes memory l4) = payable(this).call{value: 12415144284691759030}("");
  }
  function f3(bool i0,int208 i1) public   payable returns(bytes memory o0)
  {
    (bool l0) = payable(this).send(1893542707460780936);
    (bool l1, bytes memory l2) = payable(this).call{value: 5375036857947309798}("");
  }
}
// ----
// TypeError 4103: (su1.sol:59-141): Internal type is not allowed for public or external functions.
